[gd_scene load_steps=10 format=3 uid="uid://bf6refc77d2ia"]

[ext_resource type="Script" path="res://world.gd" id="1_1ycx0"]
[ext_resource type="PackedScene" uid="uid://dy4k8mqrcayqe" path="res://orbital_system.tscn" id="1_s8kjn"]
[ext_resource type="PackedScene" uid="uid://biulera3s2kby" path="res://body.tscn" id="2_6fio3"]
[ext_resource type="Script" path="res://camera_3d.gd" id="4_ssbvj"]

[sub_resource type="Environment" id="Environment_vpfv4"]
background_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_378ah"]
shading_mode = 0
albedo_color = Color(0, 0.704738, 0.717959, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ht424"]
material = SubResource("StandardMaterial3D_378ah")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t30sp"]
shading_mode = 0
albedo_color = Color(0.922864, 0.338137, 0.421369, 1)

[sub_resource type="SphereMesh" id="SphereMesh_d5fpn"]
material = SubResource("StandardMaterial3D_t30sp")

[node name="World" type="Node3D"]
script = ExtResource("1_1ycx0")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vpfv4")

[node name="OrbitalSystem" parent="." instance=ExtResource("1_s8kjn")]

[node name="Body6" parent="OrbitalSystem" instance=ExtResource("2_6fio3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.5989, 12.4906, 0)
mass = 10.0
initial_velocity = Vector3(-10, 10, 0)

[node name="Body" parent="OrbitalSystem" instance=ExtResource("2_6fio3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.50613, -8.55328, -7.62939e-06)
mass = 500.0

[node name="Body7" parent="OrbitalSystem" instance=ExtResource("2_6fio3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.9045, 13.3084, 0)
mass = 0.01
initial_velocity = Vector3(-13, 13, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.384405, 193.27)
projection = 1
size = 378.127
script = ExtResource("4_ssbvj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.578769, 0.390244, -0.716056, 0, 0.878066, 0.478539, 0.815492, -0.276963, 0.508198, 0, 0, 0)

[node name="Debug" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_ht424")

[node name="Debug2" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_d5fpn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 142.0
offset_bottom = 74.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CamLockOptions" type="OptionButton" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "LOCK_MASSCENTER"
popup/item_1/text = "LOCK_BODY"
popup/item_1/id = 1
popup/item_2/text = "LOCK_UNLOCKED"
popup/item_2/id = 2

[node name="TimeMultContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 79.0
offset_right = 89.0
offset_bottom = 172.0

[node name="LabelTimeMult" type="Label" parent="CanvasLayer/TimeMultContainer"]
layout_mode = 2
text = "text text"
horizontal_alignment = 1

[node name="DoubleTimeMult" type="Button" parent="CanvasLayer/TimeMultContainer"]
layout_mode = 2
text = "2x"

[node name="HalveTimeMult" type="Button" parent="CanvasLayer/TimeMultContainer"]
layout_mode = 2
text = "0.5x"

[node name="BodySelectContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 104.95
offset_top = 79.0
offset_right = 144.95
offset_bottom = 126.0

[node name="BodySelectLabel" type="Label" parent="CanvasLayer/BodySelectContainer"]
layout_mode = 2
text = "Body: 0"
horizontal_alignment = 1

[node name="BodyIncrement" type="Button" parent="CanvasLayer/BodySelectContainer"]
layout_mode = 2
text = "Next body"

[node name="BodyDecrement" type="Button" parent="CanvasLayer/BodySelectContainer"]
layout_mode = 2
text = "Prev body"

[connection signal="cam_unlock_override" from="Camera3D" to="." method="_on_camera_3d_cam_unlock_override"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/CamLockOptions" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/TimeMultContainer/DoubleTimeMult" to="." method="_on_double_time_mult_pressed"]
[connection signal="pressed" from="CanvasLayer/TimeMultContainer/HalveTimeMult" to="." method="_on_halve_time_mult_pressed"]
[connection signal="pressed" from="CanvasLayer/BodySelectContainer/BodyIncrement" to="." method="_on_body_increment_pressed"]
[connection signal="pressed" from="CanvasLayer/BodySelectContainer/BodyDecrement" to="." method="_on_body_decrement_pressed"]
